# SwiftSPSC

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: thread_latency.cpp  thread_throughput.cpp
cmake/: CompilerWarnings.cmake
examples/ipc/: consumer.cpp  producer.cpp
examples/thread/: basic.cpp
hft/: hft_types.h  md_gateway.cpp  strategy_engine.cpp
include/swiftspsc/: queue_common.h  spsc_queue.h  swiftspsc.h
